# paswitch

./: .copier-answers.yml  .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
src/paswitch/: __init__.py  __main__.py  audio.py  exclude.py  notification.py  paths.py
tests/: helpers.py  test_audio.py  test_cli.py  test_exclude.py  test_notification.py  test_paths.py
